fixed body color contrast wrapping main, replacing main header top margins with padding

--- a/main.css
+++ b/main.css
@@ -10,8 +10,7 @@ html, body, h1, h2, h3, h4, h5, p, ol, ul, li, a, image, iframe, form, label, in
 
 body {
 	padding-bottom: 15px;
-	margin: 0 15px;
-	border: 15px solid #555555
+	border: 15px solid #555555;
 	background-color: #AAAAAA;
 }
 
@@ -19,6 +18,7 @@ body {
 	background-image: url(/images/wall-brick.jpg); /* credit to freeimages.com/photographer/phelle-33720 */
 	background-position: center center;
 	padding: 32px 0;
+  background-color: #555555;
 }
 
 .header, .navi {
@@ -80,9 +80,11 @@ body {
 }
 
 .main {
-	margin: 0 300px;
+	margin: 0 150px;
+  padding: 0 150px;
 	font-family: 'Inconsolata', Courier, serif;
 	font-weight: bold;
+  background-color: #555555;
 }
 
 .main .extensible input {
@@ -98,7 +100,7 @@ body {
 }
 
 .main h3, .main h4, .main h5 {
-	margin-top: 72px;
+	padding-top: 72px;
 }
 
 .main h3 {
